tests/e2e/negative/n0004_missing_brace.cryo
// @test: missing_brace
// @expect: compile_fail
// @mode: raw
// @error_code: E0108
// @description: Missing closing brace should cause parse error
// @tags: syntax, errors

namespace NegBrace;

function main() -> int {
    const x: int = 5;
    return 0;
